--- a/index.html
+++ b/index.html
@@ -12,29 +12,35 @@
 </head>
 <body>
 
-  <div class="masthead grid grid-middle gutter">
+  <ul class="skip links">
+    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#nav">Jump to navigation</a></li>
+  </ul>
+
+  <header role="banner" class="masthead grid grid-middle gutter">
     <h1 class="logo push-0 unit [ xs-1 s-1 m-1-2 l-1-2 ] pad-t-1-2 pad-b-1-2">
       <i class="icon i-32 push-r-1-4"><img src="images/logo.svg" alt=""></i>
       <span class="logo-text giga icon-label text-left">Arrrgene’s Treasure Tours</span>
     </h1>
-    <div class="nav unit [ xs-1 s-1 m-1-2 l-1-2 ] pad-t-1-2 pad-b-1-2">
+    <nav role="navigation" id="nav" tabindex="o" class="nav unit [ xs-1 s-1 m-1-2 l-1-2 ] pad-t-1-2 pad-b-1-2">
       <ul class="list-group-inline mega push-0">
         <li><a class="ib gutter-1-4" href="#"><span>Tours</span></a></li>
         <li><a class="ib gutter-1-4" href="#"><span>Ships</span></a></li>
         <li><a class="ib gutter-1-4" href="#"><span>Tickets</span></a></li>
       </ul>
-    </div>
-  </div>
+    </nav>
+  </header>
 
-  <div>
-    <div class="banner embed embed-16by9">
-      <img class="embed-item" src="images/banner.jpg" alt="">
-      <div class="banner-content pin-c w-1 max-length gutter text-center">
-        <h2 class="push-1-2">Ahoy, me Hearties!</h2>
-        <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
-        <a class="btn btn-ghost btn-banner bold" href="#">Book a tour</a>
+  <main role="main" id="main" tabindex="0">
+    <div>
+      <div class="banner embed embed-16by9">
+        <img class="embed-item" src="images/banner.jpg" alt="">
+        <div class="banner-content pin-c w-1 max-length gutter text-center">
+          <h2 class="push-1-2">Ahoy, me Hearties!</h2>
+          <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
+          <a class="btn btn-ghost btn-banner bold" href="#">Book a tour</a>
+        </div>
       </div>
-    </div>
 
     <div class="island">
       <div class="card embed embed-golden">
@@ -46,11 +52,11 @@
         </div>
       </div>
     </div>
-  </div>
+  </main>
 
-  <div class="footer micro text-center island-1-2">
+  <footer role="contentinfo" tabindex="0" class="footer micro text-center island-1-2">
     <p class="push-0">© Arrrgene’s Treasure Tours</p>
-  </div>
+  </footer>
 
 </body>
 </html>
