--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
   <header role="banner" class="masthead grid grid-middle gutter">
     <h1 class="logo push-0 unit [ xs-1 s-1 m-1-2 l-1-2 ] pad-t-1-2 pad-b-1-2">
-      <i class="icon i-32 push-r-1-4"><img src="images/logo.svg" alt=""></i>
+      <i class="icon i-32 push-r-1-4"><img src="images/logo.svg" alt="Image of world map"></i>
       <span class="logo-text giga icon-label text-left">Arrrgene’s Treasure Tours</span>
     </h1>
-    <nav role="navigation" id="nav" tabindex="o" class="nav unit [ xs-1 s-1 m-1-2 l-1-2 ] pad-t-1-2 pad-b-1-2">
+    <nav role="navigation" id="nav" tabindex="0" class="nav unit [ xs-1 s-1 m-1-2 l-1-2 ] pad-t-1-2 pad-b-1-2">
       <ul class="list-group-inline mega push-0">
         <li><a class="ib gutter-1-4" href="#"><span>Tours</span></a></li>
         <li><a class="ib gutter-1-4" href="#"><span>Ships</span></a></li>
@@ -34,7 +34,7 @@
   <main role="main" id="main" tabindex="0">
     <div>
       <div class="banner embed embed-16by9">
-        <img class="embed-item" src="images/banner.jpg" alt="">
+        <img class="embed-item" src="images/banner.jpg" alt="company logo">
         <div class="banner-content pin-c w-1 max-length gutter text-center">
           <h2 class="push-1-2">Ahoy, me Hearties!</h2>
           <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
