Add sections to index

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
   </header>
 
   <main role="main" id="main" tabindex="0">
-    <div class="banner embed embed-16by9">
+    <section class="banner embed embed-16by9">
       <img class="embed-item" src="images/banner.jpg" alt="company logo">
       <div class="banner-content pin-c w-1 max-length gutter text-center">
         <h2 class="push-1-2">Ahoy, me Hearties!</h2>
         <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
         <a class="btn btn-ghost btn-banner bold" href="#">Book a tour</a>
       </div>
-    </div>
+    </section>
 
-    <div class="island">
+    <section class="island">
       <div class="card embed embed-golden">
         <div class="card-content pin-c w-1 max-length gutter text-center">
           <i class="icon i-96 push-1-2"><img src="images/ship.svg" alt=""></i>
@@ -50,7 +50,7 @@
           <a class="btn btn-light bold" href="#">See the specs</a>
         </div>
       </div>
-    </div>
+    </section>
   </main>
 
   <footer role="contentinfo" tabindex="0" class="footer micro text-center island-1-2">
